Complete homepage UI

--- a/shopping-app/views/homepage.ejs
+++ b/shopping-app/views/homepage.ejs
@@ -16,15 +16,18 @@
       <!-- Include carousel partial -->
       <%- include('components/carousel') %>
 
-      <!-- Include category partial -->
+      <!-- Category Container -->
       <div id="category-container" class="category-container"></div>
+
+      <!-- Product Container  -->
+      <div id="product-container" class="product-container"></div>
 
       <%- include('components/footer') %>
 
       <!-- Load carousel script -->
       <script src="/js/carousel.js"></script>
 
-      <!-- Load other script -->
+      <!-- Load homepage script -->
       <script src="/js/homepage.js"></script>
     </div>
   </body>
