Update product.ejs with working link

--- a/shopping-app/views/product.ejs
+++ b/shopping-app/views/product.ejs
@@ -11,8 +11,8 @@
 <body>
   <header class="topbar">
     <div class="wrap">
-      <a class="logo" href="/">GoPick</a>
-      <a class="cart" href="#">Cart</a>
+      <a class="logo" href="/homepage">GoPick</a>
+      <a class="cart" href="/cart">Cart</a>
     </div>
   </header>
 
